# magic-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/magic/common/: convert.h  cpu_time.h  defer.h  dictionary.h  environment.h  meta.h  random.cpp  random.h  result.h  routine.h  shared_ptr.h  stopwatch.h  string_builder.h  string_reader.h  time.h  uniqueid.h  unit.h
src/magic/common/generators/: data_generator.h  random_generator.h
src/magic/common/intrusive/: forward_list.h
src/magic/common/refer/: managed.h  ref.h  ref_counted.h
src/magic/common/result/: error.h  make.cpp  make.h  value_storage.h
src/magic/concurrency/: atomic_counter.h  barrier.h  blocking_queue.h  future_lite.cpp  future_lite.h  oneshotevent.h  rendezvous.h  spinlock.h
src/magic/concurrency/intrusive/: blocking_queue.h
src/magic/concurrency/local/: ptr.h
src/magic/concurrency/lockfree/: lockfree_intrusive_queue.h  lockfree_intrusive_stack.h  queue.h  stack.h  stamped_ptr.h
src/magic/coroutine/: coroutine.cpp  coroutine.h  generator.h  processor.h
src/magic/coroutine/core/: impl.cpp  impl.h
src/magic/coroutine/stackless/: dispatch.h  fire.h  task.h  yield.h
src/magic/executors/: execute.h  executor.h  inline.cpp  inline.h  manual.cpp  manual.h  strand.cpp  strand.h  task.h  thread_pool.cpp  thread_pool.h
src/magic/executors/detail/: default_task.h
src/magic/fibers/: api.h
src/magic/fibers/core/: await.h  awaiter.h  (+8 more)
src/magic/filesystem/: file.cpp  file.h
src/magic/futures/: await.h  execute.h  get.h
src/magic/net/: http.cpp  http.h
(+77 files in other folders)
